--- a/EPiServer.Samples.DatabaseEvents.Test/App.config
+++ b/EPiServer.Samples.DatabaseEvents.Test/App.config
@@ -1,6 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
     <add name="TestDB" connectionString="Data Source=.\SQLEXPRESS;Database=EPiServerLocalHead;User Id=episerverlocalHead;Password=epi#Server7Local;Network Library=DBMSSOCN;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Licensing" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.5.394.2" newVersion="7.5.394.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.5.394.2" newVersion="7.5.394.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Data" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.5.394.2" newVersion="7.5.394.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Events" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.5.394.2" newVersion="7.5.394.2" />
+      </dependentAssembly>
+    <dependentAssembly><assemblyIdentity name="EPiServer.ApplicationModules" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-7.5.394.2" newVersion="7.5.394.2" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Data.Cache" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-7.5.394.2" newVersion="7.5.394.2" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Shell" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-7.5.394.2" newVersion="7.5.394.2" /></dependentAssembly></assemblyBinding>
+  </runtime>
 </configuration>
