Changed to integrated security

--- a/EPiServer.Samples.DatabaseEvents.Test/App.config
+++ b/EPiServer.Samples.DatabaseEvents.Test/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="TestDB" connectionString="Data Source=.\SQLEXPRESS;Database=EPiServerLocalHead;User Id=episerverlocalHead;Password=epi#Server7Local;Network Library=DBMSSOCN;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="TestDB" connectionString="Data Source=.\SQLEXPRESS;Database=EPiServerLocalHead;Trusted_Connection=True;;Network Library=DBMSSOCN;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
